@@ -1,16 +1,12 @@
 package no.ntnu.logic.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
+import no.ntnu.entity.models.Accounts;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.security.core.userdetails.User;
-import org.springframework.security.core.userdetails.UserDetails;
-import org.springframework.security.core.userdetails.UserDetailsService;
-import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.stereotype.Service;
 
@@ -45,8 +41,8 @@ public class UsersService {
   public List<Users> findAll() {
     logger.info("Fetching all users");
     return StreamSupport.stream(usersRepository.findAll().spliterator(), false)
-        .filter(user -> user.getRole().equals("USER"))
-        .collect(Collectors.toList());
+        .filter(user -> user.getRole() == Accounts.Role.USER)
+        .toList();
   }
 
   /**
